4.0/ru/0x90-Appendix-A_Glossary.md
# Приложение A: Термины и сокращения

- **Address Space Layout Randomization** (ASLR) –*рандомизация распределения адресного пространства*– метод, позволяющий усложнить использование ошибок, связанных с повреждением памяти.
- **Allow list** – список разрешённых данных или операций, например список символов, разрешённых форматно-логическим контролем.
- **Application Security** –*безопасность приложений*– анализ компонентов, составляющих прикладной уровень эталонной модели взаимодействия открытых систем (модели OSI), и в меньшей степени – инфраструктуры, например, операционных систем или сетей.
- **Application Security Verification** –*верификация требований к безопасности приложений*– технический анализ приложения по стандарту OWASP ASVS.
- **Application Security Verification Report** – отчёт по тестированию конкретного приложения, в котором аудитор документирует общие результаты и даёт сопроводительные пояснения.
- **Authentication** –*аутентификация*– проверка учетных данных, предъявленных пользователем приложения.
- **Automated Verification** –*автоматизированная проверка*– поиск сигнатур уязвимостей с помощью автоматизированных инструментов динамического и/или статического анализа безопасности кода.
- **Black box testing** –*метод «чёрного ящика»*– метод тестирования программного обеспечения, который проверяет функциональность приложения, не заглядывая в его внутреннюю структуру и операции.
- **Component** –*компонент*– автономный блок кода со связанными дисковыми и сетевыми интерфейсами, который взаимодействует с другими компонентами.
- **Cross-Site Scripting** (XSS) –*межсайтовый скриптинг*– уязвимость в системе безопасности, обычно обнаруживаемая в web-приложениях, позволяющая внедрять скрипты в контент на стороне клиента.
- **Cryptographic module** –*криптографический модуль*– аппаратное, программное и/или микропрограммное обеспечение, реализующее криптографические алгоритмы и/или генерирующее криптографические ключи.
- **Common Weakness Enumeration** (CWE) –*список общих недостатков*– разработанный сообществом список распространенных недостатков безопасности программного обеспечения. Он служит общим языком, мерилом для средств обеспечения безопасности программного обеспечения, а также основой для выявления недостатков, их устранения и предотвращения.
- **Design Verification** –*верификация дизайна*– технический анализ архитектуры безопасности приложения.
- **Dynamic Application Security Testing** (DAST) –*динамический анализ кода*– технологии, предназначенные для обнаружения условий, указывающих на уязвимость системы безопасности в приложении, производящийся во время его выполнения на реальном или виртуальном процессоре.
- **Dynamic Verification** –*динамическая верификация*– использование автоматизированных инструментов, использующих сигнатуры уязвимостей для поиска проблем во время выполнения приложения.
- **Fast IDentity Online** (FIDO) - набор стандартов аутентификации, которые позволяют использовать различные методы аутентификации, включая биометрические данные, модули доверенной платформы (TPM), USB-токены и т.д.
- **Globally Unique Identifier** (GUID) – уникальный индекс, используемый в качестве идентификатора в программном обеспечении.
- **Hyper Text Transfer Protocol** (HTTPS) – протокол приложений для распределенных, гипермедиа (гипертекст+мультимедиа)-систем и совместной работы. Основа для передачи данных в World Wide Web.
- **Hardcoded keys** –*жёстко запрограммированные ключи*– криптографические ключи, которые хранятся в файловой системе, будь то код, комментарии или файлы.
- **Hardware Security Module** (HSM) —*аппаратный модуль безопасности*— аппаратный компонент, способный хранить криптографические ключи и другие секреты в защищённом виде.
- **Hibernate Query Language** (HQL) – язык запросов, внешне похожий на SQL, используемый библиотекой Hibernate ORM.
- **Input Validation** —*форматно-логический контроль*— нормализация и проверка корректности недоверенных входных данных.
- **Malicious Code** —*вредоносный код*— код, попавший в приложение во время его разработки без ведома его автора, который обходит имеющуюся политику безопасности приложения. Не путать с вредоносным ПО, таким как вирусы или черви.
- **Malware** —*вредоносное ПО*— исполняемый код, который попадает в приложение во время выполнения без ведома пользователя или администратора приложения.
- **Open Worldwide Application Security Project** (OWASP) – бесплатно распространяемый проект и открытое международное сообщество, занимающееся повышением безопасности прикладного программного обеспечения. Наша миссия — сделать безопасность приложений «видимой», чтобы люди и организации могли принимать обоснованные решения о рисках безопасности приложений. См.: <https://www.owasp.org/>
- **One-time Password** (OTP) —*одноразовый пароль*— уникальный пароль, сгенерированный для одноразового использования.
- **Object-relational Mapping** (ORM) - система, позволяющая приложению делать запросы к реляционной/табличной базе данных, используя объектную модель, совместимую с приложением.
- **Password-Based Key Derivation Function 2** (PBKDF2) - специальный односторонний алгоритм для формирования стойкого криптографического ключа на основе введённого текста (например, пароля) и дополнительного случайного значения — соли, которая затрудняет взлом пароля в режиме offline, если вместо исходного пароля хранится результирующее значение.
- **Personally Identifiable Information** (PII) —*информация, позволяющая установить личность*— информация, которая может быть использована сама по себе или в совокупности с другой информацией для идентификации, установления контакта или определения местонахождения конкретного человека.
- **Position-independent executable** (PIE) —*позиционно-независимый исполняемый файл*— текст машинного кода, который, будучи помещен где-то в основной памяти, выполняется должным образом независимо от его абсолютного адреса.
- **Public Key Infrastructure** (PKI) —*инфраструктура открытых ключей*— механизм, который связывает открытые ключи с соответствующими идентификаторами сущностей. Привязка устанавливается посредством процесса регистрации и выдачи сертификатов в центре сертификации (CA) и с его помощью.
- **Public Switched Telephone Network** (PSTN) —*коммутируемая телефонная сеть общего пользования (ТСОП, ТфОП)*— традиционная телефонная сеть, соединяющая как стационарные, так и мобильные телефоны.
- **Relying Party** (RP) —*проверяющая сторона*— как правило, приложение, которое удостоверяет пользователя данного поставщика учетных данных. Приложение проверяет токен или набор подписанных утверждений, предоставляемых этим поставщиком, чтобы убедиться, что пользователь является тем, за кого себя выдает.
- **Static application security testing** (SAST) –*статический анализ кода*– ряд технологий, предназначенных для анализа исходного кода приложения, байт-кода и бинарных файлов на наличие условий разработки и проектирования, которые указывают на уязвимости в системе безопасности. Решения SAST анализируют приложение «изнутри» в незапущенном состоянии.
- **Software development lifecycle** (SDLC) –*жизненный цикл разработки программного обеспечения*– пошаговый процесс разработки ПО, начиная с первоначальных требований, и заканчивая развертыванием и сопровождением.
- **Security Architecture** –*архитектура безопасности*– абстракция дизайна приложения, которая определяет и описывает, где и как применяются меры безопасности, а также местоположение и категории информации.
- **Security Configuration** –*конфигурация безопасности*– конфигурация среды выполнения приложения, которая влияет на то, как применяются меры безопасности.
- **Security Control** –*мера обеспечения безопасности*– функция или компонент, который контролирует (например, меры контроля доступа) или приводит к действию по обеспечению безопасности (например, регистрирует запись в журнале аудита).
- **Server-side Request Forgery** (SSRF) –*подделка запросов на стороне сервера*– атака, которая злоупотребляет функциональными возможностями сервера для чтения или обновления внутренних ресурсов путем предоставления или изменения URL-адреса, по которому код, запущенный на сервере, будет читать или отправлять данные.
- **Single Sign-on Authentication** (SSO) –*аутентификация единого входа*– пользователь входит в одно приложение, одновременно получая возможность войти в несколько других, без необходимости повторной аутентификации. Например, когда вы входите в Google, вы автоматически входите в другие сервисы Google, такие как YouTube, Google Docs, Gmail и т.д.
- **SQL Injection** (SQLi) –*SQL-инъекция*– метод внедрения кода, используемый для атаки приложений, управляемых данными, в которых вредоносные SQL-выражения вставляются в точку входа.
- **SVG** - Scalable Vector Graphics –*масштабируемая векторная графика*
- **Time-based OTP** (TOTP) - метод создания OTP, при котором текущее время является входным аргументом для алгоритма формирования пароля.
- **Threat Modeling** –*моделирование угроз*– метод, состоящий в совершенствовании архитектур безопасности для выявления нарушителей, границ доверия, мер безопасности, а также ключевых технических и бизнес-активов.
- **Transport Layer Security** (TLS) –*безопасность транспортного уровня*– криптографические протоколы, обеспечивающие безопасность канала связи по сетевому соединению.
- **Trusted Platform Module** (TPM) –*модуль доверенной платформы*– тип HSM, который обычно является компонентом другого оборудования, например, материнской платы, и выступает в роли «корня доверия» для этой системы.
- **Two-factor authentication** (2FA) –*двухфакторная аутентификация (2ФА)*– добавляет еще один уровень аутентификации для входа в учетную запись.
- **Universal 2nd Factor** (U2F) –*универсальный второй фактор*– один из стандартов, разработанных FIDO специально для использования в качестве второго фактора аутентификации NFC- или USB-токена.
- **URI/URL/фрагменты URL** –*унифицированный  идентификатор ресурса*– это строка символов, используемая для идентификации имени или web-ресурса. –*Унифицированный указатель ресурсов*– часто используется в качестве ссылки на ресурс.
- **Verifier** –*верификатор/аудитор*– лицо или группа людей, которые анализируют безопасность приложение на соответствие требованиям OWASP ASVS.
- **What You See Is What You Get** (WYSIWYG) – тип редактора гипермедиа, который показывает, как на самом деле будет выглядеть содержимое при отображении, а не код разметки, управляющий отображением.
- **Сертификат X.509** – электронный сертификат, соответствующий общепринятому международному стандарту инфраструктуры открытых ключей X.509 (PKI) для проверки принадлежности открытого ключа идентификатору пользователя, компьютера или сервиса, указанному в сертификате.
- **XML eXternal Entity** (XXE) – тип элемента XML, который может получать доступ к локальному или удаленному содержимому через объявленный идентификатор. Может привести к атакам инъекции.
