5.0/ru/0x90-Appendix-A_Glossary.md
# Приложение A: Термины и сокращения

* **Absolute Maximum Session Lifetime** —*абсолютный максимальный срок действия сессии*— также известный как "Overall Timeout" в NIST, это максимальное время, в течение которого сеанс может оставаться активным после аутентификации, независимо от действий пользователя. Это составная часть механизма завершения сессии.
* **Allowlist** — список разрешённых данных или операций, например список символов, разрешённых форматно-логическим контролем.
* **Anti-forgery token** —*токен защиты от подделки*— механизм, при котором один или несколько токенов передаются в запросе и проверяются сервером приложения, чтобы гарантировать, что запрос поступил из ожидаемой конечной точки.
* **Application Security** —*безопасность приложений*— анализ компонентов, составляющих прикладной уровень эталонной модели взаимодействия открытых систем (модели OSI), и в меньшей степени – инфраструктуры, например, операционных систем или сетей.
* **Application Security Verification** —*верификация требований к безопасности приложений*— технический анализ приложения по стандарту OWASP ASVS.
* **Application Security Verification Report** — отчёт по тестированию конкретного приложения, в котором аудитор документирует общие результаты и даёт сопроводительные пояснения.
* **Authentication** —*аутентификация*— проверка учетных данных, предъявленных пользователем приложения.
* **Automated Verification** —*автоматизированная проверка*– поиск сигнатур уязвимостей с помощью автоматизированных инструментов динамического и/или статического анализа безопасности кода.
* **Black box testing** —*метод «чёрного ящика»*— метод тестирования программного обеспечения, который проверяет функциональность приложения, не заглядывая в его внутреннюю структуру и операции.
* **Common Weakness Enumeration** (CWE) —*список общих недостатков*– разработанный сообществом список распространенных недостатков безопасности программного обеспечения. Он служит общим языком, мерилом для средств обеспечения безопасности программного обеспечения, а также основой для выявления недостатков, их устранения и предотвращения.
* **Component** —*компонент*— автономный блок кода со связанными дисковыми и сетевыми интерфейсами, который взаимодействует с другими компонентами.
* **Credential Service Provider** (CSP) — также называемый поставщиком идентификационных данных (IdP). Источник пользовательских данных, который может использоваться другими приложениями для аутентификации.
* **Cross-Site Script Inclusion** (XSSI) — разновидность атаки межсайтового скриптинга (XSS), при которой веб-приложение загружает вредоносный код из внешнего источника и включает его в состав собственного содержимого.
* **Cross-Site Scripting** (XSS) —*межсайтовый скриптинг*— уязвимость в системе безопасности, обычно обнаруживаемая в web-приложениях, позволяющая внедрять скрипты в контент на стороне клиента.
* **Cryptographic module** —*криптографический модуль*— аппаратное, программное и/или микропрограммное обеспечение, реализующее криптографические алгоритмы и/или генерирующее криптографические ключи.
* **Cryptographically secure pseudo-random number generator** (CSPRNG) -*криптографически стойкий генератор псевдослучайных чисел*- генератор псевдослучайных чисел со свойствами, делающими его пригодным для использования в криптографии, также называется криптографическим генератором случайных чисел (cryptographic random number generator, CRNG).
* **Datagram Transport Layer Security** (DTLS) — криптографический протокол, обеспечивающий безопасность связи по сетевому соединению. Он основан на протоколе TLS, но адаптирован для защиты ориентированных на датаграммы протоколов (обычно поверх UDP). Версия DTLS 1.3 стандартизирована в RFC 9147.
* **Datagram Transport Layer Security Extension to Establish Keys for the Secure Real-time Transport Protocol** (DTLS-SRTP) — механизм использования DTLS-рукопожатия для формирования ключей сеанса SRTP. Стандартизирован в RFC 5764.
* **Design Verification** —*верификация дизайна*— технический анализ архитектуры безопасности приложения.
* **Dynamic Application Security Testing** (DAST) —*динамический анализ приложения*– технологии, предназначенные для обнаружения условий, указывающих на уязвимость системы безопасности в приложении, производящийся во время его выполнения.
* **Dynamic Verification** —*динамическая верификация*— использование автоматизированных инструментов, использующих сигнатуры уязвимостей для поиска проблем во время выполнения приложения.
* **Fast IDentity Online** (FIDO) — набор стандартов аутентификации, которые позволяют использовать различные методы аутентификации, включая биометрические данные, модули доверенной платформы (TPM), USB-токены и т.д.
* **Hardware Security Module** (HSM) —*аппаратный модуль безопасности*— аппаратный компонент, способный хранить криптографические ключи и другие секреты в защищённом виде.
* **Hibernate Query Language** (HQL) — язык запросов, внешне похожий на SQL, используемый библиотекой Hibernate ORM.
* **HTTP Strict Transport Security** (HSTS) — политика, которая предписывает браузеру подключаться к домену, возвращающему заголовок, только через TLS и при наличии действительного сертификата. Активируется с помощью поля заголовка ответа Strict-Transport-Security.
* **HyperText Transfer Protocol** (HTTP) — протокол приложений для распределенных, гипермедиа (гипертекст+мультимедиа)-систем и совместной работы. Основа для передачи данных в World Wide Web.
* **HyperText Transfer Protocol over SSL/TLS** (HTTPS) — Способ защиты HTTP-соединения путём его шифрования с использованием TLS.
* **Identity Provider** (IdP) — также называется провайдером услуг аутентификации (CSP) в ссылках NIST. Сущность, которая предоставляет источник аутентификации для других приложений.
* **Inactivity Timeout** —*таймаут бездействия*— промежуток времени, в течение которого сессия может оставаться активной при отсутствии взаимодействия пользователя с приложением. Это составная часть механизма завершения сессии.
* **Input Validation** —*форматно-логический контроль*— нормализация и проверка корректности недоверенных входных данных.
* **JSON Web Token** (JWT) – RFC 7519 определяет стандарт для объекта данных JSON, состоящего из раздела заголовка (header), который объясняет, как проверять объект, раздела тела (body), содержащего набор утверждений (claims), и раздела подписи (signature), содержащей цифровую подпись для проверки содержимого раздела тела. Это тип автономного (self-contained) токена.
* **Local File Inclusion** (LFI) – атака, использующая уязвимые процедуры включения файлов в приложении, что приводит к подключению локальных файлов, уже присутствующих на сервере.
* **Malicious Code** —*вредоносный код*— код, попавший в приложение во время его разработки без ведома владельца, который обходит имеющуюся политику безопасности приложения. Не путать с вредоносным ПО, таким как вирусы или черви
* **Malware** —*вредоносное ПО*— исполняемый код, который попадает в приложение во время выполнения без ведома пользователя или администратора приложения.
* **Message authentication code** (MAC) — криптографическая контрольная сумма данных, вычисляемая алгоритмом генерации MAC, которая используется для обеспечения целостности и подлинности.
* **Multi-factor authentication** (MFA) —*многофакторная аутентификация*— аутентификация, использующая два или более различных факторов.
* **Mutual TLS** (mTLS) – См. TLS client authentication.
* **Object-relational Mapping** (ORM) – система, позволяющая приложению делать запросы к реляционной/табличной базе данных, используя объектную модель, совместимую с приложением.
* **One-time Password** (OTP) —*одноразовый пароль*— уникальный пароль, сгенерированный для одноразового использования.
* **Open Worldwide Application Security Project** (OWASP) – бесплатно распространяемый проект и открытое международное сообщество, занимающееся повышением безопасности прикладного программного обеспечения. Наша миссия — сделать безопасность приложений «видимой», чтобы люди и организации могли принимать обоснованные решения о рисках безопасности приложений. См.: [https://www.owasp.org/](https://www.owasp.org/).
* **Password-Based Key Derivation Function 2** (PBKDF2) – специальный односторонний алгоритм для формирования стойкого криптографического ключа на основе введённого текста (например, пароля) и дополнительного случайного значения — соли, которая затрудняет взлом пароля в режиме offline, если вместо исходного пароля хранится результирующее значение.
* **Public Key Infrastructure** (PKI) —*инфраструктура открытых ключей*— механизм, который связывает открытые ключи с соответствующими идентификаторами сущностей. Привязка устанавливается посредством процесса регистрации и выдачи сертификатов в центре сертификации (CA) и с его помощью.
* **Public Switched Telephone Network** (PSTN) —*коммутируемая телефонная сеть общего пользования (ТСОП, ТфОП)*— традиционная телефонная сеть, соединяющая как стационарные, так и мобильные телефоны.
* **Real-time Transport Protocol** (RTP) and **Real-time Transport Control Protocol** (RTCP) – два протокола, используемые совместно для передачи мультимедийных потоков. Применяются в стеке WebRTC. Стандартизированы в RFC 3550.
* **Reference Token** —*ссылочный токен*— тип токена, который служит указателем или идентификатором для состояния или метаданных, хранящихся на сервере, также известен как случайный или непрозрачный токен. В отличие от автономных (self-contained) токенов, сслылочный токен не содержат собственной информации, а зависят от контекста сервера. Ссылочный токен либо является идентификатором сессии, либо содержит его.
* **Relying Party** (RP) —*проверяющая сторона*— как правило, приложение, которое полагается на то, что пользователь прошёл аутентификацию у отдельного поставщика аутентификации. Приложение проверяет токен или набор подписанных утверждений, предоставляемых этим поставщиком, чтобы убедиться, что пользователь является тем, за кого себя выдает.
* **Remote File Inclusion** (RFI) —*подключение удалённых файлов*— атака, эксплуатирующая уязвимые процедуры включения файлов в приложении, что приводит к подключению удалённых файлов.
* **Scalable Vector Graphics** (SVG) —*масштабируемая векторная графика*— язык разметки на основе XML для описания двумерной векторной графики.
* **Secure Real-time Transport Protocol** (SRTP) and **Secure Real-time Transport Control Protocol** (SRTCP) – расширение протоколов RTP и RTCP, предоставляющее функции шифрования сообщений, проверки подлинности и обеспечения целостности. Стандартизирован в RFC 3711.
* **Security Architecture** —*архитектура безопасности*— абстракция дизайна приложения, которая определяет и описывает, где и как применяются меры безопасности, а также местоположение и категории информации.
* **Security Assertion Markup Language** (SAML) — открытый стандарт для единого входа (SSO), основанный на передаче подписанных утверждений (обычно в формате XML) между поставщиком идентификации и проверяющей стороной.
* **Security Configuration** —*конфигурация безопасности*— конфигурация среды выполнения приложения, которая влияет на то, как применяются меры безопасности.
* **Security Control** —*мера обеспечения безопасности*— функция или компонент, который контролирует (например, меры контроля доступа) или приводит к действию по обеспечению безопасности (например, регистрирует запись в журнале аудита).
* **Security information and event management** (SIEM) - система для обнаружения угроз, обеспечения соответствия требованиям и управления инцидентами безопасности путём сбора и анализа связанных с безопасностью данных из различных источников ИТ-инфраструктуры организации.
* **Self-Contained Token** —*автономный токен*— токен, который инкапсулирует один или несколько атрибутов, не зависящих от серверного состояния или другого внешнего хранилища. Эти токены обеспечивают подлинность и целостность содержащихся в них атрибутов, позволяя осуществлять безопасный обмен информацией между системами «без сохранения состояния». Автономные токены обычно защищаются с помощью криптографических методов, таких как цифровые подписи или коды аутентификации сообщений (MAC), для обеспечения подлинности, целостности, а в некоторых случаях и конфиденциальности своих данных. Распространёнными примерами являются SAML Assertions и JWT.
* **Server-side Request Forgery** (SSRF) —*подделка запросов на стороне сервера*— атака, которая злоупотребляет функциональными возможностями сервера для чтения или обновления внутренних ресурсов путем предоставления или изменения URL-адреса, по которому код, запущенный на сервере, будет читать или отправлять данные.
* **Session Description Protocol** (SDP) — формат сообщений для настройки мультимедийного сеанса (используется, например, в WebRTC). Стандартизирован в RFC 4566.
* **Session Identifier** or **Session ID** —*идентификатор сессии*— ключ, который идентифицирует сессию с сохранением состояния, хранящийся на серверной стороне. Передаётся клиенту и обратно с помощью ссылочного токена (reference token).
* **Session Token** —*сессионный токен*— общий термин, используемый в данном стандарте для обозначения токена или значения, применяемого в сессиях без сохранения состояния (которые используют автономный токен) или в сессиях с сохранением состояния (которые используют ссылочный токен).
* **Session Traversal Utilities for NAT** (STUN) — протокол, используемый для преодоления ограничений NAT с целью установления одноранговой связи. Стандартизирован в RFC 3489.
* **Single-factor authenticator** — Механизм проверки аутентификации пользователя. Фактором аутентификации может быть что-то, что вы знаете (запоминаемые секреты, пароли, парольные фразы, PIN-коды), что-то, что вы представляете собой (биометрия, отпечатки пальцев, сканы лица), или что-то, чем вы владеете (OTP-токены, криптографическое устройство, такое как смарт-карта).
* **Single Sign-on Authentication** (SSO) —*аутентификация единого входа*— пользователь входит в одно приложение, одновременно получая возможность войти в несколько других, без необходимости повторной аутентификации. Например, когда вы входите в Google, вы автоматически входите в другие сервисы Google, такие как YouTube, Google Docs, Gmail и т.д.
* **Software bill of materials** (SBOM) — структурированный и исчерпывающий перечень всех компонентов, модулей, библиотек, фреймворков и других ресурсов, необходимых для сборки или компиляции программного приложения.
* **Software Composition Analysis** (SCA) —*композиционный анализ*— Совокупность технологий, предназначенных для анализа состава приложений, зависимостей, библиотек и пакетов на наличие уязвимостей безопасности в используемых версиях компонентов. Не следует путать с анализом исходного кода, который теперь обычно обозначается как SAST.
* **Software development lifecycle** (SDLC) —*жизненный цикл разработки программного обеспечения*– пошаговый процесс разработки ПО, начиная с первоначальных требований, и заканчивая развертыванием и сопровождением.
* **SQL Injection** (SQLi) —**SQL-инъекция*— метод внедрения кода, используемый для атаки приложений, управляемых данными, в котором вредоносные SQL-выражения вставляются в точку входа.
* **Stateful Session Mechanism** —*механизм сессии с сохранением состояния*— механизм управления сессией, когда приложение сохраняет состояние сеанса на серверной стороне, который обычно соответствует токену сеанса, сгенерированному с использованием криптографически стойкого генератора псевдослучайных чисел (CSPRNG), и выданному конечному пользователю.
* **Stateless Session Mechanism** —*механизм сессии без сохранениея состояния*— механизм управления сессией, который использует автономный токен, который передаётся клиентам и содержит информацию о сеансе, не обязательно хранящуюся в службе, которая затем получает и проверяет токен. На практике службе потребуется доступ к некоторой информации о сеансе (например, к списку отозванных JWT), чтобы иметь возможность применять необходимые меры безопасности.
* **Static application security testing** (SAST) —*статический анализ безопасности приложений*— набор технологий, предназначенных для анализа исходного кода, байт-кода и бинарных файлов приложения с целью выявления условий на уровне кода или архитектуры, указывающих на уязвимости безопасности. Решения SAST анализируют приложение «изнутри наружу» в статическом состоянии (без выполнения).
* **Threat Modeling** —*моделирование угроз*— метод, состоящий в совершенствовании архитектур безопасности для выявления нарушителей, границ доверия, мер безопасности, а также ключевых технических и бизнес-активов.
* **Time-of-check to time-of-use** (TOCTOU) — ситуация, когда приложение проверяет состояние ресурса перед его использованием, но состояние ресурса может быть изменено между проверкой и использованием. Это может сделать результаты проверки недействительными и привести к ситуации, когда приложение выполняет некорректные действия из-за несоответствия состояния.
* **Time based One-time Passwords** (TOTPs) — метод создания OTP, при котором текущее время является входным аргументом для алгоритма формирования пароля.
* **TLS client authentication**, also called **Mutual TLS** (mTLS) — в стандартном TLS-соединении клиент может использовать сертификат, предоставленный сервером, для проверки подлинности сервера. При использовании mTLS клиент также использует свой собственный закрытый ключ и сертификат, чтобы позволить серверу проверить подлинность клиента.
* **Transport Layer Security** (TLS) —*безопасность транспортного уровня*— криптографические протоколы, обеспечивающие безопасность канала связи по сетевому соединению.
* **Traversal Using Relays around NAT** (TURN) — расширение протокола STUN, использующее TURN-сервер в качестве ретранслятора, когда прямое одноранговое соединение не может быть установлено. Стандартизировано в RFC 8656.
* **Trusted execution environment** (TEE) — изолированная среда выполнения, обеспечивающая безопасное исполнение приложений вне зависимости от состояния остальной системы.
* **Trusted Platform Module** (TPM) —*модуль доверенной платформы*— тип HSM, который обычно является компонентом другого оборудования, например, материнской платы, и выступает в роли «корня доверия» для этой системы.
* **Trusted Service Layer** —*уровень доверенных служб*— любая доверенная точка принудительного контроля, такая как микросервис, бессерверный API, серверная часть, доверенный API на клиентском устройстве с безопасной загрузкой, партнёрские или внешние API и т.д. «Доверенный» означает, что нет опасений, что недоверенный пользователь сможет обойти или пропустить слой или элементы управления, реализованные на этом уровне.
* **Uniform Resource Identifier** (URI) —*унифицированный идентификатор ресурса*— это строка символов, используемая для идентификации ресурса, например, веб-страницы, почтового адреса, места.
* **Uniform Resource Locator** (URL) —*унифицированный адрес ресурса*— это строка, указывающая местоположение ресурса в Интернете.
* **Universally Unique Identifier** (UUID) —*универсальный уникальный идентификатор*— уникальный номер-идентификатор, используемый в качестве средства идентификации в программном обеспечении.
* **Verifier** —*верификатор/аудитор*— лицо или группа людей, которые анализируют безопасность приложения на соответствие требованиям OWASP ASVS.
* **Web Real-Time Communication** (WebRTC) — стек протоколов и связанный с ним веб-API, используемые для передачи мультимедийных потоков в веб-приложениях, обычно в контексте телеконференций. Основан на SRTP, SRTCP, DTLS, SDP и STUN/TURN.
* **WebSocket over TLS** (WSS) — практика защиты WebSocket-соединения путём размещения протокола WebSocket поверх протокола TLS.
* **What You See Is What You Get** (WYSIWYG) – тип редактора гипермедиа, который показывает, как на самом деле будет выглядеть содержимое при отображении, а не код разметки, управляющий отображением.
* **X.509 Certificate** — электронный сертификат, соответствующий общепринятому международному стандарту инфраструктуры открытых ключей X.509 (PKI) для проверки принадлежности открытого ключа идентификатору пользователя, компьютера или сервиса, указанному в сертификате.
* **XML eXternal Entity** (XXE) — тип элемента XML, который может получать доступ к локальному или удаленному содержимому через объявленный идентификатор. Может привести к атакам инъекции.
